--- a/common/pom.xml
+++ b/common/pom.xml
@@ -12,12 +12,16 @@
     <artifactId>common</artifactId>
     <packaging>jar</packaging>
 
-    <!-- TODO: check if need this dependency -->
     <dependencies>
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.46.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
         </dependency>
     </dependencies>
 
