--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -111,7 +111,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>pt.isec.a2021138502.PD_Splitwise.ui.ClientGUI</mainClass>
+                    <mainClass>pt.isec.a2021138502.PD_Splitwise.ui.GUI</mainClass>
                 </configuration>
             </plugin>
             <plugin>
@@ -128,7 +128,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>pt.isec.a2021138502.PD_Splitwise.Main</mainClass>
+                                    <mainClass>pt.isec.a2021138502.PD_Splitwise.Client</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
