--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -111,7 +111,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>pt.isec.a2021138502.PD_Splitwise.ui.GUI</mainClass>
+                    <mainClass>pt.isec.a2021138502.PD_Splitwise.ui.MainGUI</mainClass>
                 </configuration>
             </plugin>
             <plugin>
