--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>common</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.12</version>
+        </dependency>
     </dependencies>
 
     <build>
