--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -7,20 +7,18 @@
         <groupId>pt.isec.a2021138502</groupId>
         <artifactId>PD_Splitwise</artifactId>
         <version>1.0</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>Server</artifactId>
+    <packaging>jar</packaging>
+    <name>Server</name>
 
     <dependencies>
         <dependency>
             <groupId>pt.isec.a2021138502</groupId>
             <artifactId>common</artifactId>
             <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.5.12</version>
         </dependency>
     </dependencies>
 
@@ -29,7 +27,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.4</version>
+                <version>3.6.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -43,6 +41,7 @@
                                     <mainClass>pt.isec.a2021138502.PD_Splitwise.ServerApp</mainClass>
                                 </transformer>
                             </transformers>
+                            <outputFile>${project.parent.basedir}/target/Server.jar</outputFile>
                         </configuration>
                     </execution>
                 </executions>
