--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,24 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '3.2.0' apply false
+    id 'io.spring.dependency-management' version '1.1.4' apply false
+    id 'org.openjfx.javafxplugin' version '0.1.0' apply false
 }
 
-group = 'pt.isec.pd'
-version = '1.0-SNAPSHOT'
+allprojects {
+    group = 'pt.isec.pd'
+    version = '1.0'
 
-repositories {
-    mavenCentral()
+    repositories {
+        mavenCentral()
+    }
 }
 
-dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-}
+subprojects {
+    apply plugin: 'java'
 
-test {
-    useJUnitPlatform()
+    java {
+        sourceCompatibility = JavaVersion.VERSION_21
+        targetCompatibility = JavaVersion.VERSION_21
+    }
 }
