--- a/sharedLib/build.gradle
+++ b/sharedLib/build.gradle
@@ -1,10 +1,7 @@
 plugins {
-    id 'java'
+    id 'java-library'
 }
 
-group = 'pt.isec.pd'
-version = '1.0'
-
-repositories {
-    mavenCentral()
+dependencies {
+    // Add any dependencies needed by your library
 }
