--- a/BackupServer/build.gradle
+++ b/BackupServer/build.gradle
@@ -1,14 +1,18 @@
 plugins {
-    id 'org.springframework.boot'
-    id 'io.spring.dependency-management'
-    id("io.freefair.lombok")
+    id 'application'
+    id "io.freefair.lombok"
 }
 
 dependencies {
     implementation project(':sharedLib')
 
-    implementation 'org.springframework.boot:spring-boot-starter'
-    compileOnly 'org.projectlombok:lombok'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools' //TODO: maybe this doesn't work on this...
-    annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.slf4j:slf4j-api:2.0.12'
+    implementation 'ch.qos.logback:logback-core:1.5.6'
+    implementation 'ch.qos.logback:logback-classic:1.5.6'
+
+    implementation 'org.xerial:sqlite-jdbc:3.46.0.0'
+}
+
+application {
+    mainClass = 'pt.isec.pd.backupserver.BackupServerApp'
 }
