--- a/Client/build.gradle
+++ b/Client/build.gradle
@@ -1,17 +1,23 @@
 plugins {
   id 'application'
   id 'org.openjfx.javafxplugin'
-  id("io.freefair.lombok")
+  id "io.freefair.lombok"
 }
 
 application {
   mainModule = 'pt.isec.pd.client'
-  mainClass = 'pt.isec.pd.client.HelloApplication'
+  mainClass = 'pt.isec.pd.client.ClientApp'
 }
 
 javafx {
   version = '21'
   modules = ['javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.swing' ]
+}
+
+repositories {
+  maven {
+    url "https://sandec.jfrog.io/artifactory/repo"
+  }
 }
 
 dependencies {
@@ -29,4 +35,8 @@ dependencies {
   implementation('eu.hansolo:tilesfx:21.0.7') {
     exclude(group: 'org.openjfx')
   }
+
+  implementation('com.dlsc.gemsfx:gemsfx:2.32.0') /*{
+    exclude(group: 'org.openjfx')
+  }*/
 }
