--- a/Client/build.gradle
+++ b/Client/build.gradle
@@ -1,7 +1,7 @@
 plugins {
   id 'application'
+  id 'io.freefair.lombok'
   id 'org.openjfx.javafxplugin'
-  id "io.freefair.lombok"
 }
 
 application {
@@ -32,11 +32,11 @@ dependencies {
   }
   implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')
   implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
-  implementation('eu.hansolo:tilesfx:21.0.7') {
+  implementation('eu.hansolo:tilesfx:21.0.9') {
     exclude(group: 'org.openjfx')
   }
 
-  implementation('com.dlsc.gemsfx:gemsfx:2.32.0') /*{
+  implementation('com.dlsc.gemsfx:gemsfx:2.64.0') /*{
     exclude(group: 'org.openjfx')
   }*/
 }
