--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -1,18 +1,18 @@
 plugins {
 	id 'application'
-	id "io.freefair.lombok"
+	id 'io.freefair.lombok'
+}
+
+application {
+	mainClass = 'pt.isec.pd.server.Server'
 }
 
 dependencies {
 	implementation project(':sharedLib')
 
-	implementation 'org.slf4j:slf4j-api:2.0.12'
-	implementation 'ch.qos.logback:logback-core:1.5.6'
-	implementation 'ch.qos.logback:logback-classic:1.5.6'
+	implementation 'org.slf4j:slf4j-api:2.0.16'
+	implementation 'ch.qos.logback:logback-core:1.5.12'
+	implementation 'ch.qos.logback:logback-classic:1.5.12'
 
-	implementation 'org.xerial:sqlite-jdbc:3.46.0.0'
-}
-
-application {
-	mainClass = 'pt.isec.pd.server.Server'
+	implementation 'org.xerial:sqlite-jdbc:3.47.0.0'
 }
