--- a/sharedLib/build.gradle
+++ b/sharedLib/build.gradle
@@ -1,11 +1,12 @@
 plugins {
     id 'java-library'
-    id "io.freefair.lombok"
+    id 'io.freefair.lombok'
 }
 
 dependencies {
-    implementation 'org.slf4j:slf4j-api:2.0.12'
-    implementation 'ch.qos.logback:logback-core:1.5.6'
+    implementation 'org.slf4j:slf4j-api:2.0.16'
+    implementation 'ch.qos.logback:logback-core:1.5.12'
+    implementation 'ch.qos.logback:logback-classic:1.5.12'
 
-    implementation 'org.xerial:sqlite-jdbc:3.46.0.0'
+    implementation 'org.xerial:sqlite-jdbc:3.47.0.0'
 }
