--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -10,9 +10,13 @@ application {
 dependencies {
 	implementation project(':sharedLib')
 
-	implementation 'org.slf4j:slf4j-api:2.0.16'
-	implementation 'ch.qos.logback:logback-core:1.5.12'
-	implementation 'ch.qos.logback:logback-classic:1.5.12'
+	implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
+	implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
+	implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.23.1'
 
-	implementation 'org.xerial:sqlite-jdbc:3.47.0.0'
+	implementation 'org.xerial:sqlite-jdbc:3.46.0.0'
+}
+
+run {
+	systemProperties System.properties
 }
