--- a/Client/build.gradle
+++ b/Client/build.gradle
@@ -29,6 +29,7 @@ dependencies {
         exclude(group: 'org.openjfx')
     }
     implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')
+    implementation('org.kordamp.ikonli:ikonli-bootstrapicons-pack:12.3.1')
     implementation('org.kordamp.ikonli:ikonli-devicons-pack:12.3.1')
     implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
     implementation('eu.hansolo:tilesfx:21.0.9') {
