--- a/Client/build.gradle
+++ b/Client/build.gradle
@@ -17,25 +17,33 @@ repositories {
     maven { url "https://sandec.jfrog.io/artifactory/repo" }
 }
 
-//TODO: check exclusions
 dependencies {
     implementation project(':sharedLib')
 
-    implementation('org.controlsfx:controlsfx:11.2.1')
+    implementation('org.controlsfx:controlsfx:11.2.1') {
+        exclude(group: 'org.openjfx')
+    }
     implementation('com.dlsc.formsfx:formsfx-core:11.6.0') {
         exclude(group: 'org.openjfx')
     }
     implementation('net.synedra:validatorfx:0.5.1') {
         exclude(group: 'org.openjfx')
     }
-    implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')
-    implementation('org.kordamp.ikonli:ikonli-bootstrapicons-pack:12.3.1')
-    implementation('org.kordamp.ikonli:ikonli-devicons-pack:12.3.1')
-    implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
+    implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1') {
+        exclude(group: 'org.openjfx')
+    }
+    implementation('org.kordamp.ikonli:ikonli-bootstrapicons-pack:12.3.1') {
+        exclude(group: 'org.openjfx')
+    }
+    implementation('org.kordamp.ikonli:ikonli-devicons-pack:12.3.1') {
+        exclude(group: 'org.openjfx')
+    }
+    implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0') {
+        exclude(group: 'org.openjfx')
+    }
     implementation('eu.hansolo:tilesfx:21.0.9') {
         exclude(group: 'org.openjfx')
     }
-
     implementation('com.dlsc.gemsfx:gemsfx:2.67.0') {
         exclude(group: 'org.openjfx')
     }
